--- a/SkyHotelApp/app/src/main/res/values/strings.xml
+++ b/SkyHotelApp/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="Hotel_introduce">비즈니스 및 휴가를 위한 이상적인 공간 \n
+
+남산 기슭에 자리잡은 스카이 서울힐튼은 대한민국 수도, 서울의 비즈니스, 문화, 역사, 쇼핑의 중심부에 위치하고 있습니다.\n 비즈니스 중심지는 약 15분 거리 이내에 있으며, 인천국제공항에서도 1시간 이내에 도착할 수 있습니다.\n
+
+또한, 스카이 서울힐튼에서는 모든 고객들이 세계 각국의 맛을 즐길 수 있도록 5개의 레스토랑, 바 그리고 델리를 갖추고 있습니다.\n 취향에 맞게 시즌즈(프렌치 요리)와 일폰테(이태리 요리), 겐지(일식), 타이판(중식)에서는 식사를, \n 바와 라운지에서는 칵테일부터 커피와 케이크를 즐길 수 있습니다. \n 이외에도 고객의 성공적인 비즈니스를 위해 초고속 인터넷을 기본으로 각종 장비가 설치된 비즈니스 센터와 8개의 회의실도 마련되어 있습니다. \n 또한, 1,000여명을 수용할 수 있는 고품격의 그랜드볼룸에서는 각종 회의 및 연회, 웨딩을 진행할 수 있습니다.\n </string>
 </resources>
