--- a/SkyHotelApp/app/src/main/res/values/strings.xml
+++ b/SkyHotelApp/app/src/main/res/values/strings.xml
@@ -56,4 +56,8 @@
         "emulated by manipulating the y-axis.\n\n"
     </string>
     <string name="action_settings">Settings</string>
+   <!-- <string name="app_name">LoginTest</string>-->
+    <string name="loading">loading</string>
+    <string name="signed_out">signed_out</string>
+    <string name="signed_in_fmt">LoginTest</string>
 </resources>
